# fraud_detection

./: .gitattributes  .gitignore  Dockerfile  README.md  app_ui.py  choose_treshold_and_save.py  create_ieee_dataset.py  docker-compose.yml  eval_model_metrics.py  eval_threshold.py  generate_dummy_artifacts.py  makefile  pyproject.toml  requirements.txt  train_ieee_lgbm.py
fraud_app/: __init__.py  __main__.py  api.py  app.py  services.py  shap_worker.py  ui.py  views.py
static/: main.js  main.js.bak  style.css  style.css.bak
templates/: index.html  index.html.bak
tests/: test_api.py
